src/OpenCV5Sharp.Native/opencv5sharp_native.h

extern "C" __declspec(dllexport) void* barcode_BarcodeDetector_setDownsamplingThreshold_0(void* self, double thresh);
extern "C" __declspec(dllexport) void barcode_BarcodeDetector_getDetectorScales_0(void* self, void* sizes);
extern "C" __declspec(dllexport) void* barcode_BarcodeDetector_setDetectorScales_0(void* self, void* sizes);
extern "C" __declspec(dllexport) double barcode_BarcodeDetector_getGradientThreshold_0(void* self);
extern "C" __declspec(dllexport) void* barcode_BarcodeDetector_setGradientThreshold_0(void* self, double thresh);
extern "C" __declspec(dllexport) void mcc_CChecker_Delete(void* self);
extern "C" __declspec(dllexport) void* mcc_CChecker_create_0();
extern "C" __declspec(dllexport) void mcc_CChecker_setTarget_0(void* self, int _target);
extern "C" __declspec(dllexport) void mcc_CChecker_setBox_0(void* self, void* _box);
extern "C" __declspec(dllexport) void mcc_CChecker_setChartsRGB_0(void* self, void* _chartsRGB);
extern "C" __declspec(dllexport) void mcc_CChecker_setChartsYCbCr_0(void* self, void* _chartsYCbCr);
extern "C" __declspec(dllexport) void mcc_CChecker_setCost_0(void* self, float _cost);
extern "C" __declspec(dllexport) void mcc_CChecker_setCenter_0(void* self, cv::Point2f _center);
extern "C" __declspec(dllexport) int mcc_CChecker_getTarget_0(void* self);
extern "C" __declspec(dllexport) void* mcc_CChecker_getBox_0(void* self);
extern "C" __declspec(dllexport) void* mcc_CChecker_getColorCharts_0(void* self);
extern "C" __declspec(dllexport) void* mcc_CChecker_getChartsRGB_0(void* self, bool getStats);
extern "C" __declspec(dllexport) void* mcc_CChecker_getChartsYCbCr_0(void* self);
extern "C" __declspec(dllexport) float mcc_CChecker_getCost_0(void* self);
extern "C" __declspec(dllexport) cv::Point2f mcc_CChecker_getCenter_0(void* self);
extern "C" __declspec(dllexport) void mcc_CCheckerDetector_Delete(void* self);
extern "C" __declspec(dllexport) bool mcc_CCheckerDetector_process_0(void* self, void* image, void* regionsOfInterest, int nc);
extern "C" __declspec(dllexport) bool mcc_CCheckerDetector_process_1(void* self, void* image, int nc);
extern "C" __declspec(dllexport) void* mcc_CCheckerDetector_getBestColorChecker_0(void* self);
extern "C" __declspec(dllexport) void* mcc_CCheckerDetector_getListColorChecker_0(void* self);
extern "C" __declspec(dllexport) void* mcc_CCheckerDetector_create_0();
extern "C" __declspec(dllexport) void mcc_CCheckerDetector_draw_0(void* self, void* checkers, void* img, cv::Scalar color, int thickness);
extern "C" __declspec(dllexport) void* mcc_CCheckerDetector_getRefColors_0(void* self);
extern "C" __declspec(dllexport) void mcc_CCheckerDetector_setDetectionParams_0(void* self, void* params);
extern "C" __declspec(dllexport) void mcc_CCheckerDetector_setColorChartType_0(void* self, int chartType);
extern "C" __declspec(dllexport) void* mcc_CCheckerDetector_getDetectionParams_0(void* self);
extern "C" __declspec(dllexport) int mcc_CCheckerDetector_getColorChartType_0(void* self);
extern "C" __declspec(dllexport) void mcc_DetectorParametersMCC_Delete(void* self);
extern "C" __declspec(dllexport) void* mcc_DetectorParametersMCC_New_0();
extern "C" __declspec(dllexport) int mcc_DetectorParametersMCC_adaptiveThreshWinSizeMin_get(void* self);
extern "C" __declspec(dllexport) void mcc_DetectorParametersMCC_adaptiveThreshWinSizeMin_set(void* self, int val);
extern "C" __declspec(dllexport) int mcc_DetectorParametersMCC_adaptiveThreshWinSizeMax_get(void* self);
extern "C" __declspec(dllexport) void mcc_DetectorParametersMCC_adaptiveThreshWinSizeMax_set(void* self, int val);
extern "C" __declspec(dllexport) int mcc_DetectorParametersMCC_adaptiveThreshWinSizeStep_get(void* self);
extern "C" __declspec(dllexport) void mcc_DetectorParametersMCC_adaptiveThreshWinSizeStep_set(void* self, int val);
extern "C" __declspec(dllexport) double mcc_DetectorParametersMCC_adaptiveThreshConstant_get(void* self);
extern "C" __declspec(dllexport) void mcc_DetectorParametersMCC_adaptiveThreshConstant_set(void* self, double val);
extern "C" __declspec(dllexport) double mcc_DetectorParametersMCC_minContoursAreaRate_get(void* self);
extern "C" __declspec(dllexport) void mcc_DetectorParametersMCC_minContoursAreaRate_set(void* self, double val);
extern "C" __declspec(dllexport) double mcc_DetectorParametersMCC_minContoursArea_get(void* self);
extern "C" __declspec(dllexport) void mcc_DetectorParametersMCC_minContoursArea_set(void* self, double val);
extern "C" __declspec(dllexport) double mcc_DetectorParametersMCC_confidenceThreshold_get(void* self);
extern "C" __declspec(dllexport) void mcc_DetectorParametersMCC_confidenceThreshold_set(void* self, double val);
extern "C" __declspec(dllexport) double mcc_DetectorParametersMCC_minContourSolidity_get(void* self);
extern "C" __declspec(dllexport) void mcc_DetectorParametersMCC_minContourSolidity_set(void* self, double val);
extern "C" __declspec(dllexport) double mcc_DetectorParametersMCC_findCandidatesApproxPolyDPEpsMultiplier_get(void* self);
extern "C" __declspec(dllexport) void mcc_DetectorParametersMCC_findCandidatesApproxPolyDPEpsMultiplier_set(void* self, double val);
extern "C" __declspec(dllexport) int mcc_DetectorParametersMCC_borderWidth_get(void* self);
extern "C" __declspec(dllexport) void mcc_DetectorParametersMCC_borderWidth_set(void* self, int val);
extern "C" __declspec(dllexport) float mcc_DetectorParametersMCC_B0factor_get(void* self);
extern "C" __declspec(dllexport) void mcc_DetectorParametersMCC_B0factor_set(void* self, float val);
extern "C" __declspec(dllexport) float mcc_DetectorParametersMCC_maxError_get(void* self);
extern "C" __declspec(dllexport) void mcc_DetectorParametersMCC_maxError_set(void* self, float val);