src/OpenCV5Sharp/Generated/NativeMethods.Objdetect.cs

        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr barcode_BarcodeDetector_setDownsamplingThreshold_0(BarcodeBarcodeDetectorHandle self, double thresh);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void barcode_BarcodeDetector_getDetectorScales_0(BarcodeBarcodeDetectorHandle self, IntPtr sizes);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr barcode_BarcodeDetector_setDetectorScales_0(BarcodeBarcodeDetectorHandle self, IntPtr sizes);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern double barcode_BarcodeDetector_getGradientThreshold_0(BarcodeBarcodeDetectorHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr barcode_BarcodeDetector_setGradientThreshold_0(BarcodeBarcodeDetectorHandle self, double thresh);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void mcc_CChecker_Delete(IntPtr self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr mcc_CChecker_create_0();
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void mcc_CChecker_setTarget_0(MccCCheckerHandle self, int _target);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void mcc_CChecker_setBox_0(MccCCheckerHandle self, IntPtr _box);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void mcc_CChecker_setChartsRGB_0(MccCCheckerHandle self, MatHandle _chartsRGB);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void mcc_CChecker_setChartsYCbCr_0(MccCCheckerHandle self, MatHandle _chartsYCbCr);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void mcc_CChecker_setCost_0(MccCCheckerHandle self, float _cost);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void mcc_CChecker_setCenter_0(MccCCheckerHandle self, Point2F _center);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern int mcc_CChecker_getTarget_0(MccCCheckerHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr mcc_CChecker_getBox_0(MccCCheckerHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr mcc_CChecker_getColorCharts_0(MccCCheckerHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr mcc_CChecker_getChartsRGB_0(MccCCheckerHandle self, [MarshalAs(UnmanagedType.U1)] bool getStats);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr mcc_CChecker_getChartsYCbCr_0(MccCCheckerHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern float mcc_CChecker_getCost_0(MccCCheckerHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern Point2F mcc_CChecker_getCenter_0(MccCCheckerHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void mcc_CCheckerDetector_Delete(IntPtr self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        [return: MarshalAs(UnmanagedType.U1)]
        public static extern bool mcc_CCheckerDetector_process_0(MccCCheckerDetectorHandle self, MatHandle image, IntPtr regionsOfInterest, int nc);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        [return: MarshalAs(UnmanagedType.U1)]
        public static extern bool mcc_CCheckerDetector_process_1(MccCCheckerDetectorHandle self, MatHandle image, int nc);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr mcc_CCheckerDetector_getBestColorChecker_0(MccCCheckerDetectorHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr mcc_CCheckerDetector_getListColorChecker_0(MccCCheckerDetectorHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr mcc_CCheckerDetector_create_0();
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void mcc_CCheckerDetector_draw_0(MccCCheckerDetectorHandle self, IntPtr checkers, MatHandle img, Scalar color, int thickness);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr mcc_CCheckerDetector_getRefColors_0(MccCCheckerDetectorHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void mcc_CCheckerDetector_setDetectionParams_0(MccCCheckerDetectorHandle self, IntPtr @params);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void mcc_CCheckerDetector_setColorChartType_0(MccCCheckerDetectorHandle self, int chartType);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr mcc_CCheckerDetector_getDetectionParams_0(MccCCheckerDetectorHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern int mcc_CCheckerDetector_getColorChartType_0(MccCCheckerDetectorHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void mcc_DetectorParametersMCC_Delete(IntPtr self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr mcc_DetectorParametersMCC_New_0();
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern int mcc_DetectorParametersMCC_adaptiveThreshWinSizeMin_get(MccDetectorParametersMCCHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void mcc_DetectorParametersMCC_adaptiveThreshWinSizeMin_set(MccDetectorParametersMCCHandle self, int val);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern int mcc_DetectorParametersMCC_adaptiveThreshWinSizeMax_get(MccDetectorParametersMCCHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void mcc_DetectorParametersMCC_adaptiveThreshWinSizeMax_set(MccDetectorParametersMCCHandle self, int val);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern int mcc_DetectorParametersMCC_adaptiveThreshWinSizeStep_get(MccDetectorParametersMCCHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void mcc_DetectorParametersMCC_adaptiveThreshWinSizeStep_set(MccDetectorParametersMCCHandle self, int val);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern double mcc_DetectorParametersMCC_adaptiveThreshConstant_get(MccDetectorParametersMCCHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void mcc_DetectorParametersMCC_adaptiveThreshConstant_set(MccDetectorParametersMCCHandle self, double val);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern double mcc_DetectorParametersMCC_minContoursAreaRate_get(MccDetectorParametersMCCHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void mcc_DetectorParametersMCC_minContoursAreaRate_set(MccDetectorParametersMCCHandle self, double val);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern double mcc_DetectorParametersMCC_minContoursArea_get(MccDetectorParametersMCCHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void mcc_DetectorParametersMCC_minContoursArea_set(MccDetectorParametersMCCHandle self, double val);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern double mcc_DetectorParametersMCC_confidenceThreshold_get(MccDetectorParametersMCCHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void mcc_DetectorParametersMCC_confidenceThreshold_set(MccDetectorParametersMCCHandle self, double val);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern double mcc_DetectorParametersMCC_minContourSolidity_get(MccDetectorParametersMCCHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void mcc_DetectorParametersMCC_minContourSolidity_set(MccDetectorParametersMCCHandle self, double val);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern double mcc_DetectorParametersMCC_findCandidatesApproxPolyDPEpsMultiplier_get(MccDetectorParametersMCCHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void mcc_DetectorParametersMCC_findCandidatesApproxPolyDPEpsMultiplier_set(MccDetectorParametersMCCHandle self, double val);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern int mcc_DetectorParametersMCC_borderWidth_get(MccDetectorParametersMCCHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void mcc_DetectorParametersMCC_borderWidth_set(MccDetectorParametersMCCHandle self, int val);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern float mcc_DetectorParametersMCC_B0factor_get(MccDetectorParametersMCCHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void mcc_DetectorParametersMCC_B0factor_set(MccDetectorParametersMCCHandle self, float val);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern float mcc_DetectorParametersMCC_maxError_get(MccDetectorParametersMCCHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void mcc_DetectorParametersMCC_maxError_set(MccDetectorParametersMCCHandle self, float val);
